tests/baselines/reference/noImplicitThisFunctions.errors.txt
tests/cases/compiler/noImplicitThisFunctions.ts(14,12): error TS2681: 'this' implicitly has type 'any' because it does not have a type annotation.


==== tests/cases/compiler/noImplicitThisFunctions.ts (1 errors) ====
    
    function f1(x) {
        // implicit any is still allowed
        return x + 1;
    }
    
    function f2(y: number) {
        // ok: no reference to this
        return y + 1;
    }
    
    function f3(z: number): number {
        // error: this is implicitly any
        return this.a + z;
               ~~~~
!!! error TS2681: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    
    // ok, arrow functions don't even bind `this`, so `this` is just `window`
    let f4: (b: number) => number = b => this.c + b;
    